# RabbitMQ-Learning

./: .gitignore  RabbitMQ.sln  tutorial-links.txt
csharp/: instructions.txt
csharp/consumer/: Program.cs  global.json
csharp/producer/: Program.cs
csharp/pubsub_pattern/publisher/: Program.cs
csharp/pubsub_pattern/subscriber1/: Program.cs
csharp/pubsub_pattern/subscriber2/: Program.cs
python/: instructions.txt  pyproject.toml
python/consumer/: consumer.py
python/producer/: producer.py
python/pubsub_pattern/: publisher.py  subscriber1.py  subscriber2.py
