[tool.poetry]
name = "rabbitmq"
version = "1.0.0"
description = "RabbitMQ learning"
authors = ["Mohd Redzuan, Sharizan <Sharizan.MohdRedzuan@hess.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.0"
pandas = "^2.2.3"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
